--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 #container {
     text-align: center;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.5);
     height: 800px;
     width: 1200px;
     border-radius: 2%;
